<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        android:key="notifications_enabled"
        android:icon="@drawable/ic_settings_notifications"
        android:title="@string/notifications_enable_title"
        android:summary="@string/notifications_enable_summary"
        android:defaultValue="false" />

    <PreferenceCategory
        android:title="@string/notifications_filters_title"
        android:dependency="notifications_enabled">

        <SwitchPreferenceCompat
            android:key="notify_alerts"
            android:icon="@drawable/ic_notif_alert"
            android:title="@string/notifications_alerts_title"
            android:summary="@string/notifications_alerts_summary"
            android:defaultValue="true"
            android:dependency="notifications_enabled" />

        <SwitchPreferenceCompat
            android:key="notify_detections"
            android:icon="@drawable/ic_notif_detection"
            android:title="@string/notifications_detections_title"
            android:summary="@string/notifications_detections_summary"
            android:defaultValue="false"
            android:dependency="notifications_enabled" />

        <Preference
            android:key="notify_cameras"
            android:icon="@drawable/ic_notif_camera"
            android:title="@string/notifications_cameras_title"
            android:summary="@string/notifications_all_cameras"
            android:dependency="notifications_enabled" />

        <Preference
            android:key="notify_zones"
            android:icon="@drawable/ic_notif_zone"
            android:title="@string/notifications_zones_title"
            android:summary="@string/notifications_all_zones"
            android:dependency="notifications_enabled" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/notifications_motion_section"
        android:dependency="notifications_enabled">

        <Preference
            android:key="motion_notify_cameras"
            android:icon="@drawable/ic_notif_camera"
            android:title="@string/notifications_motion_cameras"
            android:summary="@string/off"
            android:dependency="notifications_enabled" />

        <ListPreference
            android:key="motion_notify_cooldown"
            android:icon="@drawable/ic_notif_history"
            android:title="@string/notifications_motion_cooldown"
            android:defaultValue="60"
            android:entries="@array/cooldown_entries"
            android:entryValues="@array/cooldown_values"
            android:dependency="notifications_enabled"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:key="motion_notify_urgent"
            android:icon="@drawable/ic_notif_alert"
            android:title="@string/notifications_motion_urgent"
            android:summary="@string/notifications_motion_urgent_summary"
            android:defaultValue="false"
            android:dependency="notifications_enabled" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/notifications_behavior_title"
        android:dependency="notifications_enabled">

        <SwitchPreferenceCompat
            android:key="notifications_external_only"
            android:icon="@drawable/ic_conn_external"
            android:title="@string/notifications_external_only"
            android:summary="@string/notifications_external_only_summary"
            android:defaultValue="false"
            android:dependency="notifications_enabled" />

        <ListPreference
            android:key="notify_tap_action"
            android:icon="@drawable/ic_notif_tap"
            android:title="@string/notifications_tap_action"
            android:summary="@string/notifications_tap_action_summary"
            android:entries="@array/notify_tap_action_entries"
            android:entryValues="@array/notify_tap_action_values"
            android:defaultValue="review"
            android:dependency="notifications_enabled" />

        <ListPreference
            android:key="notify_cooldown_global"
            android:icon="@drawable/ic_notif_history"
            android:title="@string/notifications_global_cooldown"
            android:defaultValue="0"
            android:entries="@array/cooldown_entries"
            android:entryValues="@array/cooldown_values"
            android:dependency="notifications_enabled"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="notify_cooldown_camera"
            android:icon="@drawable/ic_notif_camera"
            android:title="@string/notifications_camera_cooldown"
            android:defaultValue="0"
            android:entries="@array/cooldown_entries"
            android:entryValues="@array/cooldown_values"
            android:dependency="notifications_enabled"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/notifications_sounds_title"
        android:dependency="notifications_enabled">

        <Preference
            android:key="notify_alert_sound"
            android:icon="@drawable/ic_notif_volume_up"
            android:title="@string/notifications_alert_sound"
            android:summary="@string/notifications_sound_summary"
            android:dependency="notifications_enabled" />

        <Preference
            android:key="notify_detection_sound"
            android:icon="@drawable/ic_notif_chime"
            android:title="@string/notifications_detection_sound"
            android:summary="@string/notifications_sound_summary"
            android:dependency="notifications_enabled" />

        <Preference
            android:key="notify_motion_sound"
            android:icon="@drawable/ic_notif_chime"
            android:title="@string/notifications_motion_sound"
            android:summary="@string/notifications_sound_summary"
            android:dependency="notifications_enabled" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/notifications_reliability_title"
        android:dependency="notifications_enabled">

        <Preference
            android:key="dnd_bypass"
            android:icon="@drawable/ic_notif_dnd"
            android:title="@string/notifications_dnd_title"
            android:summary="@string/notifications_dnd_summary"
            android:dependency="notifications_enabled" />

        <Preference
            android:key="battery_optimization"
            android:icon="@drawable/ic_notif_battery"
            android:title="@string/notifications_battery_title"
            android:summary="@string/notifications_battery_summary"
            android:dependency="notifications_enabled" />

        <Preference
            android:key="exact_alarms"
            android:icon="@drawable/ic_notif_battery"
            android:title="@string/notifications_alarms_title"
            android:summary="@string/notifications_alarms_summary"
            android:dependency="notifications_enabled" />

        <Preference
            android:key="oem_background_restrictions"
            android:icon="@drawable/ic_notif_oem"
            android:title="@string/notifications_background_title"
            android:dependency="notifications_enabled" />

        <Preference
            android:key="last_alert_received"
            android:icon="@drawable/ic_notif_history"
            android:title="@string/notifications_last_alert"
            android:selectable="false"
            android:dependency="notifications_enabled" />

        <Preference
            android:key="service_diagnostics"
            android:icon="@drawable/ic_about_issue"
            android:title="@string/notifications_diagnostics"
            android:summary="@string/notifications_diagnostics_summary"
            android:dependency="notifications_enabled" />

    </PreferenceCategory>

</PreferenceScreen>
