<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.asksakis.freegate.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_setup"
            app:destination="@id/nav_setup"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/nav_setup"
        android:name="com.asksakis.freegate.ui.setup.SetupFragment"
        android:label="@string/setup_title"
        tools:layout="@layout/fragment_setup" />

    <fragment
        android:id="@+id/nav_clip_export"
        android:name="com.asksakis.freegate.ui.export.ClipExportFragment"
        android:label="下載片段" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.asksakis.freegate.ui.settings.SettingsFragment"
        android:label="@string/menu_settings">
        <action
            android:id="@+id/action_settings_to_connection"
            app:destination="@id/nav_settings_connection"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_settings_to_notifications"
            app:destination="@id/nav_settings_notifications"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_settings_to_downloads"
            app:destination="@id/nav_settings_downloads"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_settings_to_advanced"
            app:destination="@id/nav_settings_advanced"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_settings_to_about"
            app:destination="@id/nav_settings_about"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings_connection"
        android:name="com.asksakis.freegate.ui.settings.ConnectionSettingsFragment"
        android:label="@string/settings_connection_title">
        <action
            android:id="@+id/action_connection_to_servers"
            app:destination="@id/nav_settings_servers"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings_notifications"
        android:name="com.asksakis.freegate.ui.settings.NotificationsSettingsFragment"
        android:label="@string/settings_notifications_title">
        <action
            android:id="@+id/action_notifications_to_cameras"
            app:destination="@id/nav_settings_notification_cameras"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_notifications_to_zones"
            app:destination="@id/nav_settings_notification_zones"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_notifications_to_motion_cameras"
            app:destination="@id/nav_settings_notification_motion_cameras"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings_notification_cameras"
        android:name="com.asksakis.freegate.ui.settings.NotificationCamerasFragment"
        android:label="@string/notifications_cameras_title" />

    <fragment
        android:id="@+id/nav_settings_notification_zones"
        android:name="com.asksakis.freegate.ui.settings.NotificationZonesFragment"
        android:label="@string/notifications_zones_title" />

    <fragment
        android:id="@+id/nav_settings_notification_motion_cameras"
        android:name="com.asksakis.freegate.ui.settings.NotificationMotionCamerasFragment"
        android:label="@string/notifications_motion_cameras" />

    <fragment
        android:id="@+id/nav_settings_downloads"
        android:name="com.asksakis.freegate.ui.settings.DownloadsSettingsFragment"
        android:label="@string/settings_downloads_title" />

    <fragment
        android:id="@+id/nav_settings_advanced"
        android:name="com.asksakis.freegate.ui.settings.AdvancedSettingsFragment"
        android:label="@string/settings_advanced_title" />

    <fragment
        android:id="@+id/nav_settings_servers"
        android:name="com.asksakis.freegate.ui.settings.ServersFragment"
        android:label="@string/settings_servers_title" />

    <fragment
        android:id="@+id/nav_settings_about"
        android:name="com.asksakis.freegate.ui.settings.AboutSettingsFragment"
        android:label="@string/settings_about_title" />
</navigation>
